...
                            <constraint firstItem="eDl-zP-yBF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="ivr-u2-VUR"/>
                            <constraint firstItem="upp-8b-r26" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ne3-wX-idK"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eDl-zP-yBF" secondAttribute="bottom" id="txo-ZK-hmJ"/>
                            <constraint firstItem="eDl-zP-yBF" firstAttribute="top" secondItem="upp-8b-r26" secondAttribute="bottom" constant="8" id="wct-Ok-ynA"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="When Did I Last?" id="qQo-3o-XNP">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="P8e-Av-f5E">
                            <connections>
                                <action selector="addEventButtonTap:" destination="BYZ-38-t0r" id="7aE-ZO-MsW"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WgU-IM-5nO">
                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                <items>
                                    <navigationItem title="Add Event" id="aYV-7S-MFe">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="TnN-hP-x3h">
                                            <connections>
                                                <action selector="cancelButtonTap:" destination="j68-lv-vo0" id="IDY-G7-N1v"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="yhF-sO-hwV">
...
                                    </navigationItem>
                                </items>
                            </navigationBar>
                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gPu-cz-rQo">
                                <rect key="frame" x="0.0" y="64" width="600" height="225"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Nc-ym-YN5">
                                        <rect key="frame" x="20" y="55" width="560" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="eventTitleField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event Description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wx9-h4-quX">
                                        <rect key="frame" x="20" y="113" width="560" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="eventInfoField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
...
